--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.0",
     "bootstrap": "^4.3.1",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
