--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/jest": "24.0.20",
     "@types/node": "12.11.7",
+    "@types/pubsub-js": "^1.5.18",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.0",
@@ -12,6 +13,7 @@
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
+    "pubsub-js": "^1.7.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
