--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.5.0",
+    "eslint-plugin-jest": "^23.13.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "node-sass": "^4.14.1",
