--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "eslint-plugin-jest": "^23.13.1",
     "mobx": "^5.15.4",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.6",
+    "nock": "^12.0.3",
     "prettier": "^2.0.5"
   },
   "scripts": {
